Fix another alignment problem.
The layout.css files provide by the Exhibit Builder plugin are
now being loaded in (see commit
062f88c15205a3a1b5b680aef54ecc76826f2747).
This newly-loaded css create an alignment issue. This commit
fixes this alignment issue.

--- a/css/screen.css
+++ b/css/screen.css
@@ -708,3 +708,7 @@ a.link-to-item-page {
 #item-page-content #itemfiles .item-file video {
   float: right;
 }
+
+.layout-gallery .gallery.left {
+  margin-right: inherit;
+}
